# x3d

./: CMakeLists.txt
include/x3d/: auto_release_pool.h  bounds3.h  collection.h  color.h  cube.h  field.h  graph_node.h  hemicube.h  ieee_fp.h  interval.h  iteratable.h  iterator.h  matrix44.h  observable.h  observer.h  opengl.h  particle.h  point3.h  quaternion.h  reference.h  renderable.h  retainable.h  rotation.h  scene.h  scene_view.h  sphere.h  spring_damper.h  transformation.h  translation.h  triangle.h  vector3.h  x3d.h
include/x3d/radiosity/: element.h  winged_edge.h
msvc/x3d/: x3d.ncb  x3d.sln  x3d.vcproj
msvc/x3d/Debug/: BuildLog.htm  mt.dep  vc80.idb  x3d.ilk
project_builder/x3d.pbproj/: john.pbxuser  project.pbxproj
samples/cornell_box/: main.cpp  radiosity.cpp  radiosity.h  window.cpp  window.h
samples/test1/: main.cpp  window.cpp  window.h
source/: auto_release_pool.cpp  collection.cpp  color.h  cube.cpp  element.cpp  element.h  field.cpp  graph_node.cpp  hemicube.cpp  hemicube.h  ieee_fp.h  main.cpp  mesh.h  opengl.h  point3.h  radiosity.cpp  radiosity.h  rotation.cpp  scene.cpp  scene_view.cpp  sphere.cpp  transformation.cpp  translation.cpp  triangle.cpp  vector3.h  window.cpp  window.h  x3d.h
xcode/x3d.xcodeproj/: john.mode1  john.mode1v3  john.pbxuser  project.pbxproj
xcode/x3d.xcodeproj/project.xcworkspace/xcuserdata/john.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/x3d.xcodeproj/xcuserdata/john.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
(+1 files in other folders)
